--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -7,8 +7,8 @@
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		document.addEventListener("DOMContentLoaded", () => {
-			$("#rucher").on("change", function () {
-				table.columns(4).search(this.value).draw();
+			document.getElementById('rucher').addEventListener("change", (event) => {
+				table.columns(4).search(event.target.value).draw();
 			});
 			const idTbl = '#ruchesplus';
 			const table = new DataTable(idTbl, {
