--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -25,7 +25,7 @@
 						action: function (e, dt, node, config)
 						{
 							config.title = Evenements + " " + (new Date()).toLocaleDateString();
-							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							const inputSearch = table.search();
 							if (inputSearch.length !== 0) {
 						    	config.title += " <" + inputSearch + ">";
 							}
