--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -17,7 +17,7 @@
 						extend: 'pdf', exportOptions: {columns: ':visible'},
 						action: function (e, dt, node, config) {
 							config.title = Personnes + " " + (new Date()).toLocaleDateString();
-							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							const inputSearch = table.search();
 							if (inputSearch.length !== 0) {
 								config.title += " <" + inputSearch + ">";
 							}
