--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -23,7 +23,7 @@
 					extend: 'pdf', exportOptions: {columns: ':visible'},
 					action: function (e, dt, node, config) {
 						config.title = Ruches + " " + (new Date()).toLocaleDateString();
-						const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+						const inputSearch = table.search();
 						if (inputSearch.length !== 0) {
 							config.title += " <" + inputSearch + ">";
 						}
