--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -17,7 +17,7 @@ document.addEventListener("DOMContentLoaded", () => {
 	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
 	    		action: function (e, dt, node, config) {
 							config.title = `${Ruches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`;
-							const inputSearch = $.trim($(`${idTbl}_filter label input`).val());
+							const inputSearch = table.search();
 							if (inputSearch.length !== 0) {
 								config.title += " <" + inputSearch + ">";
 							}
