--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -29,7 +29,7 @@
 			<th:block th:unless="${#lists.isEmpty(eveRucherRuche)}">
 				<h1 class="accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse0" aria-expanded="true" aria-controls="collapse0"
+						data-bs-target="#collapse0" aria-expanded="false" aria-controls="collapse0"
 						th:text="#{HistRuchersEveKO}">
 					</button>
 				</h1>
@@ -70,7 +70,7 @@
 			<th:block th:unless="${#lists.isEmpty(rucherNonVide)}">
 				<h1 class="accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1"
+						data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1"
 						th:text="#{HistRuchersFinKO}">
 					</button>
 				</h1>
@@ -100,7 +100,7 @@
 			<th:block th:unless="${#lists.isEmpty(eveInc)}">
 				<h1 class="accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2"
+						data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2"
 						th:text="#{EvenIncomplets}">
 					</button>
 				</h1>
@@ -151,7 +151,7 @@
 			<th:block th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
 				<h1 class="accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3"
+						data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3"
 						th:text="#{HistHaussesEveKO}">
 					</button>
 				</h1>
@@ -188,7 +188,7 @@
 			<th:block th:unless="${#lists.isEmpty(rucheNonVide)}">
 				<h1 class=" accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4"
+						data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{HistRuchesFinKO}">
 					</button>
 				</h1>
@@ -220,7 +220,7 @@
 			<th:block th:unless="${#lists.isEmpty(eveDisperseActifs)}">
 				<h1 class=" accordion-header">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse5" aria-expanded="true" aria-controls="collapse4"
+						data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{EssDisperseActifKO}">
 					</button>
 				</h1>
@@ -230,11 +230,14 @@
 							<thead>
 								<tr>
 									<th th:text="#{essaim}"></th>
+									<th th:text="#{evenement}"></th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr th:each="eve : ${eveDisperseActifs}">
 									<td><a th:href="@{'/essaim/'+${eve.essaim.id}}" th:text="${eve.essaim.nom}"></a>
+									</td>
+									<td><a th:href="@{'/evenement/'+${eve.id}}" th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"></a>
 									</td>
 								</tr>
 							</tbody>
@@ -252,7 +255,7 @@
 			<th:block th:unless="${#lists.isEmpty(essaimInactifsNonDisp)}">
 				<h1 class=" accordion-header">
 					<button class="accordion-button collapsed .text-danger" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapse6" aria-expanded="true" aria-controls="collapse4"
+						data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{EssInactSansDisperKO}">
 					</button>
 				</h1>
