suppression message en double

--- a/src/main/resources/templates/ruche/rucheHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheHausseForm.html
@@ -1,30 +1,31 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	document.addEventListener("DOMContentLoaded", () => {
-		$("#commentaire").focus();
-		$("#evenementForm").validate({
-			errorClass : 'erreur-form',
-			errorPlacement : function(error, element) {
-				error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		document.addEventListener("DOMContentLoaded", () => {
+			$("#commentaire").focus();
+			$("#evenementForm").validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -35,25 +36,23 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{hausseXX(${hausse.nom})}"></th:block>
-					<a th:href="@{'/ruche/hausses/'+${ruche.id}}"
-						th:text="#{ajoutSurLaruche(${ruche.nom})}"></a>
+					<a th:href="@{'/ruche/hausses/'+${ruche.id}}" th:text="#{ajoutSurLaruche(${ruche.nom})}"></a>
 				</h1>
 			</div>
 		</div>
 		<div th:if="${hausse.ruche}" class="row">
 			<div class="col">
-				<a th:href="@{'/ruche/'+${hausse.ruche.id}}"
-					th:text="#{retraitDeLaruche(${hausse.ruche.nom})}"></a>
+				<a th:href="@{'/ruche/'+${hausse.ruche.id}}" th:text="#{retraitDeLaruche(${hausse.ruche.nom})}"></a>
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/ruche/hausse/ajout/'+${ruche.id}+'/'+${hausse.id}}"
-		method="post" id="evenementForm">
+	<form action="#" th:action="@{'/ruche/hausse/ajout/'+${ruche.id}+'/'+${hausse.id}}" method="post"
+		id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div th:replace="includeForm :: commentaire"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
