tests couleurs si ko, bootstrap 5.3.0 -> 5.3.1

--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -28,7 +28,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(eveRucherRuche)}">
 				<h1 class="accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse0" aria-expanded="false" aria-controls="collapse0"
 						th:text="#{HistRuchersEveKO}">
 					</button>
@@ -69,7 +69,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(rucherNonVide)}">
 				<h1 class="accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1"
 						th:text="#{HistRuchersFinKO}">
 					</button>
@@ -99,7 +99,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(eveInc)}">
 				<h1 class="accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2"
 						th:text="#{EvenIncomplets}">
 					</button>
@@ -150,7 +150,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
 				<h1 class="accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3"
 						th:text="#{HistHaussesEveKO}">
 					</button>
@@ -187,7 +187,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(rucheNonVide)}">
 				<h1 class=" accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{HistRuchesFinKO}">
 					</button>
@@ -219,7 +219,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(eveDisperseActifs)}">
 				<h1 class=" accordion-header">
-					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{EssDisperseActifKO}">
 					</button>
@@ -254,7 +254,7 @@
 			</h1>
 			<th:block th:unless="${#lists.isEmpty(essaimInactifsNonDisp)}">
 				<h1 class=" accordion-header">
-					<button class="accordion-button collapsed .text-danger" type="button" data-bs-toggle="collapse"
+					<button class="accordion-button collapsed bg-success" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse4"
 						th:text="#{EssInactSansDisperKO}">
 					</button>
