--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -15,9 +15,9 @@
 	th:href="@{/images/bootstrap-icons-1.10.2/bootstrap-icons.css}" />
 <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
 <script th:src="@{/js/jquery.validate.min-1.19.5.js}"></script>
-<script th:src="@{/js/bootstrap-5.3.0-2/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/js/bootstrap-5.3.1/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/bootstrap-5.3.0-2/bootstrap.min.css}" />
+	th:href="@{/js/bootstrap-5.3.1/bootstrap.min.css}" />
 <script th:src="@{/js/datatables-1.13.5-1/datatables.min.js}"></script>
 <script th:inline="javascript">
 	function updateTheme() {
