--- a/src/main/resources/templates/essaim/essaimCommentaireForm.html
+++ b/src/main/resources/templates/essaim/essaimCommentaireForm.html
@@ -6,7 +6,7 @@
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 		$("#commentaire").focus();
 		$("#evenementForm").validate({
 			errorClass : 'erreur-form',
