--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -24,7 +24,7 @@
 	const creertxt = /*[[#{creer}]]*/null;
 	const urlessaimclone = /*[[@{/essaim/clone/}]]*/null;
 	const essaimid = /*[[${essaim.id}]]*/null;
-	document.addEventListener("DOMContentLoaded", essaimDetail);
+	document.addEventListener('DOMContentLoaded', essaimDetail);
 </script>
 </head>
 <body>
