--- a/src/main/resources/templates/hausse/hausseForm.html
+++ b/src/main/resources/templates/hausse/hausseForm.html
@@ -8,7 +8,7 @@
 	const hausseNoms = /*[[${hausseNoms}]]*/null;
 	const nomexiste = /*[[#{nomexiste}]]*/null;
 	const saisirnbcadresinfmax = /*[[#{saisirnbcadresinfmax}]]*/null;
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 		$("#dateAcquisition").datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
 		$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
