--- a/src/main/resources/templates/recolte/recolteChoixHausses.html
+++ b/src/main/resources/templates/recolte/recolteChoixHausses.html
@@ -8,7 +8,7 @@
 	const recolteId = /*[[${recolte.id}]]*/null;
 	const selHausRet = /*[[#{selecthaussesretirer}]]*/null;
 	const selHausAjout = /*[[#{selecthaussesajouter}]]*/null;
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 				function updateLinks(e, dt, type, indexes) {
 					let id;
 					let href;
