--- a/src/main/resources/templates/ruche/rucheDetail.html
+++ b/src/main/resources/templates/ruche/rucheDetail.html
@@ -17,7 +17,7 @@
 		const creer = /*[[#{creer}]]*/ null;
 		const urlclone = /*[[@{/ruche/clone/}]]*/ null;
 		const rucheid = /*[[${ruche.id}]]*/ null;
-		document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener("click", (event) => {
 				if (recolteHausses) {
 					alert(rnpsupprec);
