--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -11,7 +11,7 @@
 		const nbRuchesTotal = /*[[${nbRuchesTotal}]]*/null;
 		const suppTypeRuche = /*[[#{suppTypeRuche}]]*/null;
 		const typeRucheSuppNon = /*[[#{typeRucheSuppNon}]]*/null;
-		document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener("click", (event) => {
 				if (nbRuchesTotal != "0") {
 					alert(typeRucheSuppNon);
