--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -6,7 +6,7 @@
 const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 const rucheTypes = /*[[#{rucheTypes}]]*/ null;
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener('DOMContentLoaded', () => {
     new DataTable('#ruchetypes', {
         dom: 'Blftip',
         scrollX: true,
