--- a/src/main/resources/templates/essaim/essaimStatistiques.html
+++ b/src/main/resources/templates/essaim/essaimStatistiques.html
@@ -6,7 +6,7 @@ const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 const buttontextcol = /*[[#{buttontextcol}]]*/ null;
 const Essaims = /*[[#{Essaims}]]*/ null;
 const Production = /*[[#{Production}]]*/ null;
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener('DOMContentLoaded', () => {
     $('.bi-question-lg').popover({
         html: true
     });
