--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -17,7 +17,7 @@
 	const EcartType = /*[[#{EcartType}]]*/ null;
 	const Min = /*[[#{Min}]]*/ null;
 	const Max = /*[[#{Max}]]*/ null;
-	document.addEventListener("DOMContentLoaded", graphe);
+	document.addEventListener('DOMContentLoaded', graphe);
 </script>
 </head>
 <body>
