--- a/src/main/resources/templates/evenement/evenementCommRucheDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommRucheDetail.html
@@ -4,7 +4,7 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 	<script th:inline="javascript">
 		const suppeve = /*[[#{supprimerevenement}]]*/null;
-		document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener("click", (event) => {
 				if (confirm(suppeve)) {
 					return true;
