--- a/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
+++ b/src/main/resources/templates/evenement/evenementRucheAjoutListe.html
@@ -9,7 +9,7 @@
 	const Evenements = /*[[#{evenementsrucheajout}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	document.addEventListener("DOMContentLoaded", () => evenementListe(true));
+	document.addEventListener('DOMContentLoaded', () => evenementListe(true));
 </script>
 </head>
 <body>
