--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -17,7 +17,7 @@ const urlclone = /*[[@{/hausse/clone/}]]*/ null;
 const hausseid = /*[[${hausse.id}]]*/ null;
 const hausses = /*[[#{Hausses}]]*/ null;
 const creer = /*[[#{creer}]]*/ null;
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener('DOMContentLoaded', () => {
 	document.getElementById('supprime').addEventListener("click", (event) => {
 		if(recolteHausses) {
 			alert(haussesupp);
