--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -77,7 +77,7 @@
 	th:src="@{/js/dom-to-image-more.min-2.15.0.js}"></script>
 <script defer th:fragment="jspdf" th:src="@{/js/jspdf-2.5.1.umd.min.js}"></script>
 
-<script th:fragment="jsChart" th:src="@{/js/chart.umd-4.3.0.js}"></script>
+<script th:fragment="jsChart" th:src="@{/js/chart.umd-4.3.1.js}"></script>
 
 <link th:fragment="weather-icons" rel="stylesheet" type="text/css"
 	media="all"
@@ -91,7 +91,7 @@
 <link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css"
 	media="all" th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}" />
 <script th:fragment="localejsdatetimepicker">
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 		$("#date").datetimepicker();
 		$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
 	});
