--- a/src/main/resources/templates/personne/personneForm.html
+++ b/src/main/resources/templates/personne/personneForm.html
@@ -6,7 +6,7 @@
 	const loginexiste = /*[[#{loginexiste}]]*/null;
 	const personneEmails = /*[[${personneEmails}]]*/null;
 	const emailexiste = /*[[#{emailexiste}]]*/null;
-	document.addEventListener("DOMContentLoaded", () => {
+	document.addEventListener('DOMContentLoaded', () => {
 		$("#nom").focus();
 		jQuery.validator.addMethod("loginExiste", function(value) {   
     		return $.inArray(value, personneLogins) == -1;
