--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -15,8 +15,7 @@
 	const Hausses = /*[[#{Hausses}]]*/null;
 	const Pots = /*[[#{Pots}]]*/null;
 	const HaussesEssaim = /*[[#{HaussesEssaim}]]*/null;
-	document.addEventListener("DOMContentLoaded", grapheRecolte);
-	});
+	document.addEventListener('DOMContentLoaded', grapheRecolte);
 </script>
 </head>
 <body>
