--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -15,7 +15,7 @@
 		const listeRuches = /*[[#{listeRuches}]]*/ null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 		const buttontextcol = /*[[#{buttontextcol}]]*/ null;
-		document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('DOMContentLoaded', () => {
 			document.getElementById('supprime').addEventListener("click", (event) => {
 				if (rucherDepot) {
 					alert(depotNPES);
