--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -3,7 +3,7 @@
 
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 	<script th:inline="javascript">
-		document.addEventListener("DOMContentLoaded", () => {
+		document.addEventListener('DOMContentLoaded', () => {
 			new DataTable('#distsRuchers', {
 				paging: false,
 				searching: false,
