--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -5,7 +5,7 @@
 const buttontextprint = /*[[#{buttontextprint}]]*/null;
 const buttontextcol = /*[[#{buttontextcol}]]*/null;
 const ruchersProdRecolte = /*[[#{ruchersProdRecolte}]]*/null;
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener('DOMContentLoaded', () => {
 	$('.bi-question-lg').popover({
         html: true
     });
